--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+
+# Modified from https://www.gitignore.io/api/android,intellij,gradle,linux,osx,windows
+
+### Android ###
 # Built application files
 *.apk
-*.aar
 *.ap_
-*.aab
 
-# Files for the ART/Dalvik VM
+# Files for the Dalvik VM
 *.dex
 
 # Java class files
@@ -13,9 +15,7 @@
 # Generated files
 bin/
 gen/
-out/
-#  Uncomment the following line in case you need and you don't have the release build type files in your app
-# release/
+app/release/output.json
 
 # Gradle files
 .gradle/
@@ -36,50 +36,111 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# IntelliJ
+### Android Patch ###
+gen-external-apklibs
+
+
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+
 *.iml
+
+# User-specific configurations
 .idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
-# Android Studio 3 in .gitignore file.
-.idea/caches
-.idea/modules.xml
-# Comment next line if keeping position of elements in Navigation Editor is relevant for you
-.idea/navEditor.xml
+.idea/misc.xml
 
-# Keystore files
-# Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+## Directory-based project format:
+/.idea/
+!/.idea/codeStyles/*
 
-# External native build folder generated in Android Studio 2.2 and later
-.externalNativeBuild
-.cxx/
+## File-based project format:
+*.ipr
+*.iws
 
-# Google Services (e.g. APIs or Firebase)
-# google-services.json
+## Plugin-specific files:
 
-# Freeline
-freeline.py
-freeline/
-freeline_project_description.json
+# IntelliJ
+/out/
 
-# fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
-fastlane/readme.md
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-# Version control
-vcs.xml
+# JIRA plugin
+atlassian-ide-plugin.xml
 
-# lint
-lint/intermediates/
-lint/generated/
-lint/outputs/
-lint/tmp/
-# lint/reports/
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+
+
+### Gradle ###
+.gradle
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+
+### Linux ###
+*~
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+
+### Windows ###
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
