--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,12 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "MOCK_API", '"https://10.42.0.1:3000/api"'
+        buildConfigField "boolean", "USE_MOCK_API", "true"
     }
 
     buildTypes {
@@ -42,18 +46,25 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
 
     // RX Java
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
-    implementation 'io.reactivex:rxkotlin:3.0.0'
+    implementation 'com.github.reactivex:rxkotlin:3.0.1'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     // Dagger2
-    implementation 'com.google.dagger:dagger:2.10'
-    kapt 'com.google.dagger:dagger-compiler:2.10'
+    implementation 'com.google.dagger:dagger:2.20'
+    kapt 'com.google.dagger:dagger-compiler:2.20'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
