--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.github.skiprollins.vsc"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -47,7 +47,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     implementation 'androidx.multidex:multidex:2.0.1'
-
+    implementation 'androidx.camera:camera-camera2:1.1.0-alpha03'
+    implementation 'androidx.camera:camera-lifecycle:1.1.0-alpha03'
+    implementation 'androidx.camera:camera-view:1.0.0-alpha23'
 
     // RX Java
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
@@ -73,7 +75,12 @@ dependencies {
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    // ML Kit Barcode Scanner
+    implementation 'com.google.mlkit:barcode-scanning:16.1.1'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+apply plugin: 'kotlin-android-extensions'
